yoshimi 2.3.1.3 M

2023-12-8 Will
bn 2293
Removed redundant code that was generating warnings in clang.

2023-12-4 Will
bn 2292
Finding the HTML guide now handles versions with M or rc suffixes.
Further updates to dev_notes.

2023-12-2 Will
bn 2291
BugFix: Rather obscure build failure - not finding inline loadText()
    Only happens on a headless build.

Updated ParamCheck.cpp/.h copyrights.
    None of this code predates Kristian's work.
Spelling corrections in User Guide and Control Data
Set bugfix release 2.3.1.3

2023-12-1 Will
bn 2290
Removed errant CR from text, disrupting manual discovery.
Commented out some canaries.
Set bugfix release 2.3.1.2

2023-11-30 Will
bn 2289
Revised HTML guide discovery.
    Also provides guide location to CLI
Updated Control Data.
Set bugfix release 2.3.1.1

2023-11-26 Will
bn 2288
Added missing details in Control Data filter section.
    legacy PDF now held back (available from me if needed)
Typo corrections in Control Data files.
Updates to files in dev-notes.
Set bugfix version 2.3.1.1 rc1

2023-11-24 Will
bn 2287
BugFix: AddSynth Tabs not updating on 'Paste' action - never did!
Small Control Data updates and clarifications.

2023-11-17 Will
bn 2286
BugFix: Numerous PadSynth controls not updating on preset Paste
BugFix: AddSynth slider not updating on preset Paste
Fixed speeling Eras in guides :p

2023-11-17 Will
bn 2285
Properly fixed CLI AddSynth voice number affecting PadSynth controls
Paste clipboard button disabled if no entry for that section
Small style cleanups in copy/paste
Updated Yoshimi Control Data/toplevel.html
Updated HTML guide for preset

2023-11-15 Will
bn 2284
Changed Presets internal name "presets" to "params"
Changed "PresetsUpdate" to "ParamsUpdate"
Changed "changePresets" to "changeParams"
Changed "presetsUpdated" to "paramsChanged"
Changed source file Presets.h to ParamCheck.h
Changed source file Presets.cpp to ParamCheck.cpp
Some small GUI cleanups
Completed changes. Presets is now ParamBase
