@@ -22,7 +22,7 @@
     </p>
     <p>
     <b>Copy</b>
-    If there are any entries in the presets list, selecting one fills in the 'Name' field and activates the 'Copy to Preset' button. Alternatively you can fill in a new name. Once there is an entry clicking on the button will store in in the current presets directory. You can also copy it to the clipboard where no name is used.
+    If there are any entries in the presets list, selecting one fills in the 'Name' field and activates the 'Copy to Preset' button. Alternatively you can fill in a new name. Once there is an entry, clicking on the button will store it in the current presets directory. You can also copy it to the clipboard. No name is used there.
     </p>
     <p>
     <b>Paste</b>
