@@ -1,6 +1,12 @@
 yoshimi 2.3.1.3 M
 
 2023-12-8 Will
+bn 2294
+Added test for max text messages used (disabled)
+Re-implemented text message clear on hard reset (ctrl+Reset)
+Updates to Control Data and User Guide
+
+2023-12-8 Will
 bn 2293
 Removed redundant code that was generating warnings in clang.
 
